Little fix of main header wrap

--- a/css/style.scss
+++ b/css/style.scss
@@ -270,7 +270,8 @@ body {
       display: flex;
       justify-content: space-between;
       align-items: baseline;
-      
+      flex-wrap: wrap;
+      column-gap: 20px;
    }
    &__title {
       color: #000;
@@ -430,7 +431,7 @@ body {
       grid-area: title;
       display: flex;
       justify-content: space-between;
-      margin: 0px 0px 20px 0px;
+      margin: 0px 0px 30px 0px;
       & select {
          border: none;
          outline: none;
